customer support coming behind floating video bug resolve

--- a/EP/styles/scss/App.scss
+++ b/EP/styles/scss/App.scss
@@ -1081,7 +1081,7 @@ body:not(.using-mouse) .btn-primary:focus {
   }
 
   .resizeable {
-    z-index: 1000;
+    z-index: 998;
     border: 2px solid $cerulean;
   }
 
